--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div>
         <ul>
             <li v-for="item in add">
-                <button @click="addItem(item)">Add {{ item.name }}</button>
+                <button @click="addItem(item)" :disabled="exists(item.name)">Add {{ item.name }}</button>
             </li>
         </ul>
         <ul>
@@ -273,6 +273,9 @@
 
         },
         methods: {
+            exists(name) {
+                return this.layout.find(e => e.name == name) !== undefined;
+            },
             itemTitle(item) {
                 // return item.i;
                 return item.name;
