--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <style scoped>
+    * {
+        margin: 0;
+        padding: 0;
+    }
     .layoutJSON {
         background: #ddd;
         border: 1px solid black;
